deployment/aks/frontend/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elearning
  labels:
    name: elearning
    environment: production
    app.kubernetes.io/name: elearning
    app.kubernetes.io/component: platform
